--- a/src/index.css
+++ b/src/index.css
@@ -44,3 +44,107 @@ body{
   margin-top: 40px;
   font-size: 25px;
 }
+
+.phone {
+  height: 100vh;
+  width: 100vw;
+  background-color: rgb(0, 0, 0);
+  color: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+@keyframes puls1{
+  0%{
+    position: absolute;
+    left: 10%;
+    top: 10%;
+    box-shadow: 0px 0px 1000px 100px red;
+    z-index: 1000;
+  }
+  50%{
+    position: absolute;
+    left: 130%;
+    top: 40%;
+    box-shadow: 0px 0px 1000px 100px rgb(255, 88, 88);
+    z-index: 1000;
+  }
+  100%{
+    position: absolute;
+    left: 10%;
+    top: 10%;
+    box-shadow: 0px 0px 1000px 100px red;
+    z-index: 1000;
+  }
+}
+.phone .bc1{
+  position: absolute;
+  left: 10%;
+  top: 10%;
+  box-shadow: 0px 0px 1000px 100px red;
+  z-index: 1000;
+  animation: puls1 20s ease-in-out infinite ;
+}
+@keyframes puls2{
+  0%{
+    right: 30%;
+    bottom: 20%;
+  }
+  50%{
+    right: 130%;
+    bottom: 40%;
+  }
+  100%{
+    right: 30%;
+    bottom: 20%;
+  }
+}
+.phone .bc2{
+  position: absolute;
+  right: 30%;
+  bottom: 20%;
+  box-shadow: 0px 0px 1000px 100px red;
+  z-index: 1000;
+  animation: puls2 30s ease-in-out infinite ;
+
+}
+.phone .displayMsg{
+  width: 80vw;
+  height: 40%;
+  border: solid 3px rgba(255, 255, 255, 0.5);
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  backdrop-filter: blur(100px);
+  background-color: rgba(255, 255, 255, 0.07);
+}
+.phone .displayMsg .icon{
+  font-size: 100px;
+  color: rgb(255, 0, 0);
+}
+.phone .displayMsg .para{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  font-size: 1.2rem;
+}
+.phone .displayMsg .para .p1{
+  color: red;
+  font-size: 1.3rem;
+}
+.phone .displayMsg .para .p2{
+  color: white;
+}
+@media screen and (max-width: 768px) {
+  .phone {
+    display: flex; /* Show only on mobile screens */
+  }
+
+  .desktop-content {
+    display: none; /* Hide main content on mobile */
+  }
+}
