--- a/src/index.css
+++ b/src/index.css
@@ -117,8 +117,8 @@ body{
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  backdrop-filter: blur(100px);
   background-color: rgba(255, 255, 255, 0.07);
+  filter: blur(10);
 }
 .phone .displayMsg .icon{
   font-size: 100px;
