--- a/src/component/dashboard/dashboard.css
+++ b/src/component/dashboard/dashboard.css
@@ -14,7 +14,7 @@
 .dashboard .skl1, .dashboard .skl3, .dashboard .skl4{
     border: solid 1px rgba(0, 0, 0, 0.200);
 }
-.dashboard .title{
+.dashboard>.title{
     margin-left: 20px;
     margin-top: 20px;
     width: calc(95vw - 50px);
@@ -31,7 +31,7 @@
     margin-left: 20px;
     font-size: 25px;
 }
-.dashboard .body{
+.dashboard>.body{
     margin-left: 10px;
     margin-right: 10px;
     /* border: solid 1px black; */
@@ -77,7 +77,6 @@ background: linear-gradient(124deg, rgba(4,57,146,1) 23%, rgba(83,187,249,1) 87%
     background: rgb(83,0,141);
 background: linear-gradient(124deg, rgba(83,0,141,1) 23%, rgba(197,83,249,1) 87%);
 } */
-.dashboard .sec1 .ctnr1 .b5{}
 @keyframes rotate-bg{
     0%{
         background: rgb(203,64,64);
@@ -153,6 +152,66 @@ background: linear-gradient(124deg, rgba(83,0,141,1) 23%, rgba(197,83,249,1) 87%
     justify-content: center;
     color: rgb(72, 72, 72);
 }
+
+.dashboard .sec3{
+    width: 100%;
+    height: 400px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 100px;
+
+}
+.dashboard .sec3 > div{
+    width: 600px;
+    height: 350px;
+    background-color: white;
+    box-shadow: 0px 0px 20px 1px rgba(0, 0, 0, 0.250);
+    border-radius: 5px;
+}
+.dashboard .sec3 div .title{
+    width: 100%;
+    height: 35px;
+    border-bottom: solid 2px black;
+}
+.dashboard .sec3 div .title p{
+    margin-left: 10px;
+    margin-top: 5px;
+    font-size: 22px;
+    font-weight: 500;
+}
+.dashboard .sec3 div .body{
+    width: 100%;
+    height: 305px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    overflow-y: scroll;
+}
+.dashboard .sec3 div .body .table{
+    width: 95%;
+ }
+.dashboard .sec3 div .body .sktable{
+   width: 95%;
+}
+.dashboard .sec3 div .body .processDone{
+    height: 305px;
+    width: 95%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.dashboard .sec3 div .body .processDone .icon{
+    color: green;
+    font-size: 70px;
+}
+.dashboard .sec3 div .body .processDone p{
+    color: rgb(34, 34, 34);
+}
+
+
 .dashboard .sec2{
     height: 800px;
     width: 100%;
