--- a/src/index.css
+++ b/src/index.css
@@ -16,19 +16,20 @@ body{
   font-family: "Poppins", serif;
 }
 .loading{
-  height: 250px;
-  width: 250px;
-  background-color: white;
+  /* height: 50px;
+  width: 200px; */
+  padding: 10px 20px;
+  background-color: rgba(255, 255, 255, 0.2);
+  border: solid 2px rgba(255, 255, 255, 0.4);
   border-radius: 20px;
-  box-shadow: 0px 0px 50px 5px rgba(0, 0, 0, 0.442);
+  box-shadow: 0px 0px 50px 5px rgba(0, 0, 0, 0.0);
   display: flex;
-  flex-direction: column;
   align-items: center;
-  color: black;
+  color: white;
 }
 .loading .pi{
-  font-size: 100px;
-  margin-top: 50px;
+  margin-right: 10px;
+  font-size: 40px;
   animation: spin 1s ease-in-out infinite;
 }
 @keyframes spin {
@@ -41,7 +42,6 @@ body{
 }
 .loading > p{
   font-weight: 700;
-  margin-top: 40px;
   font-size: 25px;
 }
 
