--- a/src/component/dashboard/dashboard.css
+++ b/src/component/dashboard/dashboard.css
@@ -169,17 +169,52 @@ background: linear-gradient(124deg, rgba(83,0,141,1) 23%, rgba(197,83,249,1) 87%
     box-shadow: 0px 0px 20px 1px rgba(0, 0, 0, 0.250);
     border-radius: 5px;
 }
-.dashboard .sec3 div .title{
+.dashboard .sec3 > div .title{
     width: 100%;
-    height: 35px;
-    border-bottom: solid 2px black;
+    height: 40px;
+    border-bottom: 3px solid black;
+    display: flex;
+    align-items: center;
 }
-.dashboard .sec3 div .title p{
-    margin-left: 10px;
-    margin-top: 5px;
-    font-size: 22px;
+.dashboard .sec3 > div .title .left{
+    width: calc(100% - 100px);
+    height: 40px;
+    display: flex;
+    align-items: center;
+}
+.dashboard .sec3 > div .title .left p{
+    margin-left: 20px;
+    font-size: 20px;
     font-weight: 500;
 }
+.dashboard .sec3 > div .title .right{
+    width: 100px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.dashboard .sec3 > div .title .right .button{
+    width: 70px;
+    height: 25px;
+    background-color: rgb(255, 22, 22);
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 600;
+}
+.dashboard .sec3 > div .title .right .green{
+    background-color: rgb(0, 255, 0);
+}
+.dashboard .sec3 > div .title .right .button:hover{
+    cursor: pointer;
+    transition: 200ms;
+    width: 80px;
+    height: 30px;
+    font-size: 19px;
+}
+
 .dashboard .sec3 div .body{
     width: 100%;
     height: 305px;
